cmd/testdata/overlay/overlayed-with-ingress-with-context/usa/app-dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
