cmd/testdata/overlay/overlayed-with-ingress-with-context/usa/app-dev/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: app-dev
resources:
- ../../base
- ingress.yaml
